FetchTask 启用透明 GZip 压缩 (#4219)